--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -92,8 +92,8 @@
 }
 
 .mega-dropdown.my-dropdown img {
-    max-width: 100%;
-    max-height: 200px;
+    max-width: 120px;
+    height: 100px;
     padding: 2px;
     border: 1px solid var(--white-off);
     border-radius: 12px;
@@ -343,6 +343,7 @@
     width: 100%;
     color: var(--gray);
     background-color: transparent;
+    font-weight: var(--fw-500);
 }
 
 .my-input-control input::placeholder {
@@ -590,8 +591,6 @@
 }
 
 .my-has-scrollbar:hover::-webkit-scrollbar {
-    width: 12px;
-    height: 14px;
     background-color: var(gray);
     border: 1px solid var(--border-color);
     border-radius: 2px;
@@ -810,8 +809,8 @@ input[type="radio"]:checked::after {
     position: absolute;
     right: 1px;
     top: -2px;
-    width: 16px;
-    height: 16px;
+    width: 19px;
+    height: 17px;
     border-radius: 50%;
     font-size: var(--fs-xs);
     color: var(--white);
