--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -417,6 +417,10 @@ tr {
     color: var(--border-color);
 }
 
+.my-text-border2 {
+    color: var(--border-color2);
+}
+
 .my-text-orange {
     color: var(--orange);
 }
@@ -425,6 +429,9 @@ tr {
     color: var(--white-off);
 }
 
+.my-text-secondary {
+    color: var(--secondary-color);
+}
 
 
 /*______  Bg Color ______ */
@@ -464,6 +471,14 @@ tr {
     background-color: var(--secondary-color);
 }
 
+.my-bg-border2 {
+    background-color: var(--border-color2);
+}
+
+.my-bg-border {
+    background-color: var(--border-color);
+}
+
 
 
 
@@ -474,23 +489,23 @@ tr {
 }
 
 .my-p-1 {
-    padding: 5;
+    padding: 4px;
 }
 
 .my-p-2 {
-    padding: 10px;
+    padding: 8px;
 }
 
 .my-p-3 {
-    padding: 15px;
+    padding: 12px;
 }
 
 .my-p-4 {
-    padding: 20px;
+    padding: 16px;
 }
 
 .my-p-5 {
-    padding: 25px;
+    padding: 20px;
 }
 
 .my-pl-0 {
@@ -544,50 +559,55 @@ tr {
 
 
 .my-px-1 {
-    padding: 0 5px;
+    padding: 0 4px;
 }
 
 .my-px-2 {
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 .my-px-3 {
-    padding: 0 15px;
+    padding: 0 12px;
 }
 
 .my-px-4 {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.my-px-5 {
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.my-px-5 {
-    padding-left: 25px;
-    padding-right: 25px;
+.my-py-half {
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .my-py-1 {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .my-py-2 {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .my-py-3 {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .my-py-4 {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .my-py-5 {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 
