--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -339,17 +339,20 @@ header .header-top .left a:hover {
 /* dropdown */
 
 .all-department .dropdown {
+    opacity: 0;
     position: absolute;
     left: 100%;
     width: fit-content;
     text-wrap: nowrap;
-    top: 0px;
+    top: -4px;
     background-color: var(--white);
     padding: 10px 0px;
     box-shadow: var(--shadow-2);
     border: 1px solid var(--border-color);
-    z-index: 12;
-    display: none;
+    visibility: hidden;
+    transform: translateX(-25px);
+    transition: .2s linear;
+    z-index: -1;
 }
 
 .all-department .dropdown li {
@@ -385,9 +388,13 @@ header .header-top .left a:hover {
 
 .all-department li:hover>.dropdown {
     opacity: 1;
-    top: 0px;
-    max-height: 1000px;
+    top: -4px;
+    max-height: 1400px;
     display: flex;
+    transform: translateX(0);
+    transition: .2s linear;
+    visibility: visible;
+    z-index: 12;
 }
 
 .all-department .dropdown li a:hover {
@@ -1171,6 +1178,7 @@ footer .footer-pages .footer-head::after {
         width: 100%;
         visibility: hidden;
         background-color: var(--white);
+        overflow: auto;
     }
 
     /* header top */
