--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -331,9 +331,15 @@
     margin: 5px 0;
 }
 
+.my-input-control textarea {
+    transition: .15s;
+    border: 1px solid var(--border-color2);
+    border-radius: 10px;
+}
+
 .my-input-control input {
     padding: 12px 14px;
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--border-color2);
     outline: none;
     border-radius: 8px;
     transition: .15s linear;
@@ -351,7 +357,8 @@
     font-size: var(--fs-sm);
 }
 
-.my-input-control input:focus {
+.my-input-control input:focus,
+.my-input-control textarea:focus {
     outline: 4px solid #0aad0a4d;
     padding-left: 20px;
 }
