--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -200,6 +200,23 @@ tr {
 }
 
 
+/* Border */
+.my-border {
+    border: 1px solid var(--border-color);
+}
+
+.my-border2 {
+    border: 1px solid var(--border-color2);
+}
+
+.my-border-top {
+    border-top: 1px solid var(--border-color2);
+}
+
+.my-border-bottom {
+    border-bottom: 1px solid var(--border-color2);
+}
+
 /*_____ Title  _____*/
 .my-section-title {
     font-size: var(--fs-xxl);
@@ -226,9 +243,7 @@ tr {
 }
 
 
-.my-border {
-    border: 1px solid var(--border-color);
-}
+
 
 .my-shadow-1 {
     box-shadow: var(--shadow-1);
@@ -892,9 +907,7 @@ tr {
     border-radius: var(--radius-round);
 }
 
-.my-border {
-    border: 1px solid var(--white-off);
-}
+
 
 .my-border-none {
     border: none !important;
