--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -1425,7 +1425,11 @@ footer .footer-pages .footer-head::after {
 }
 
 
-@media (max-width:768px) {}
+@media (max-width:768px) {
+    footer {
+        padding-bottom: 70px;
+    }
+}
 
 
 
@@ -1462,6 +1466,11 @@ footer .footer-pages .footer-head::after {
 
     .my-modal.shopping-cart .info h6 {
         min-width: 150px;
+    }
+
+    .footer-top-area .head {
+        flex-direction: column;
+        gap: 12px;
     }
 
 }
