--- a/Static/Css/pages/product-page.css
+++ b/Static/Css/pages/product-page.css
@@ -497,7 +497,42 @@
     padding: 12px;
     padding-right: 24px;
     padding-left: 80px;
-    background-color: var(--white-off);
+}
+
+
+
+
+
+
+
+
+
+
+
+/* Related products slider css */
+.related-products.swiper {
+    width: 100%;
+    height: 100%;
+    max-width: 1100px;
+}
+
+.related-products .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    box-shadow: unset;
+    padding: 0;
+}
+
+.related-products .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    align-items: stretch;
 }
 
 
