--- a/Static/Css/pages/home.css
+++ b/Static/Css/pages/home.css
@@ -890,27 +890,31 @@ swiper-slide.hero img {
 ****   Tabs Products Area   ****
 *******************************/
 .tab-area .tab-buttons {
-    background-color: var(--white-off);
+    /* background-color: var(--white-off); */
     padding: 10px 14px;
     width: fit-content;
     margin: 0 auto;
     border-radius: 4px;
+    gap: 12px;
 }
 
 .tab-area .tab-buttons button {
-    padding: 18px 24px;
-    background-color: var(--primary-color);
+    background-color: transparent;
     font-size: var(--fs-sm);
     color: var(--white);
     font-weight: var(--fw-600);
+    color: var(--gray);
+    border-bottom: 2px solid transparent;
+    padding: 6px 8px;
 }
 
 .tab-area .tab-buttons button.active {
-    background-color: var(--secondary-color);
+    border-bottom: 2px solid var(--primary-hover-color);
+    color: var(--primary-hover-color);
 }
 
 .tab-area .tab-buttons button:hover {
-    background-color: var(--secondary-color);
+    border-bottom: 2px solid var(--primary-hover-color);
 }
 
 
@@ -924,22 +928,20 @@ swiper-slide.hero img {
 }
 
 .tabs-products .my-card {
-    box-shadow: var(--shadow-2);
-    border-color: var(--border-color);
+    border-color: var(--border-color2);
 }
 
 .tabs-products .my-card p {
     margin-top: 6px;
 }
 
-.tabs-products .my-grid-3 {
+.tab-area .content {
     display: none;
 }
 
-.tabs-products .my-grid-3.active {
-    display: grid;
+.tab-area .content.active {
+    display: block;
 }
-
 
 .tabs-products .product-cart .hide-icons {
     transition-delay: .1s;
@@ -970,6 +972,39 @@ swiper-slide.hero img {
     height: calc(100% - 3px);
     z-index: -1;
 }
+
+
+/* tab area products slider css */
+.tab-products.swiper {
+    width: 100%;
+    height: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.tab-products .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    box-shadow: unset;
+    padding: 0;
+}
+
+.tab-products .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    align-items: stretch;
+}
+
+
+
+
+
 
 
 
@@ -1449,6 +1484,10 @@ swiper-slide.hero img {
 
     .tab-area .tab-buttons button {
         width: 250px;
+    }
+
+    .tab-products.swiper {
+        max-width: 400px;
     }
 }
 
