--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -62,6 +62,7 @@ h5 {
 
 h6 {
     font-size: var(--fs-sm);
+    line-height: 17px;
 }
 
 ul {
@@ -126,6 +127,10 @@ textarea {
     resize: none;
     width: 100%;
     height: 120px;
+}
+
+label {
+    user-select: none;
 }
 
 select option {
@@ -293,7 +298,28 @@ tr {
     width: fit-content;
 }
 
+.w-10 {
+    width: 40px;
+}
 
+.w-12 {
+    width: 48px;
+}
+
+.w-15 {
+    width: 60px;
+}
+
+.w-20 {
+    width: 80px;
+}
+
+.w-22 {
+    width: 88px;
+}
+
+
+/* wrap */
 .my-text-nowrap {
     text-wrap: nowrap;
 }
