--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -58,6 +58,7 @@ h4 {
 
 h5 {
     font-size: var(--fs-md);
+    line-height: 17px;
 }
 
 h6 {
@@ -627,15 +628,18 @@ tr {
 
 
 .my-px-1 {
-    padding: 0 4px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 .my-px-2 {
-    padding: 0 8px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .my-px-3 {
-    padding: 0 12px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 .my-px-4 {
@@ -1389,6 +1393,15 @@ tr {
 
     .my-grid-6 {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+
+    .my-w-sm-100 {
+        width: 100%;
+    }
+
+    .my-w-sm-50 {
+        width: 500%;
     }
 }
 
