--- a/Static/Css/pages/checkout.css
+++ b/Static/Css/pages/checkout.css
@@ -92,6 +92,21 @@
 
 
 
+
+
+
+/************************
+****    Cart Page   *****
+*************************/
+.cart-page {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 50px;
+}
+
+
+
+
 @media (max-width:1080px) {
     .checkout-area {
         grid-template-columns: 1fr;
