--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -156,7 +156,7 @@ table {
     border-collapse: collapse;
 }
 
-table td,
+td,
 th {
     min-width: 75px;
     padding: 4px;
@@ -329,8 +329,8 @@ tr {
     width: 100%;
 }
 
-.max-450 {
-    max-width: 450px;
+.max-550 {
+    max-width: 600px;
     width: 100%;
 }
 
@@ -355,8 +355,15 @@ tr {
     overflow-x: auto;
 }
 
+.disable {
+    cursor: no-drop;
+    opacity: .5;
+}
 
-
+.disable:hover {
+    background-color: transparent !important;
+    color: var(--gray) !important;
+}
 
 /* Ripple effect */
 .ripple {
