--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -240,6 +240,7 @@ header .header-top .left a:hover {
 
 .header-bottom {
     border-top: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color) !important;
 }
 
 .header-bottom .left {
