--- a/Static/Css/pages/order_details.css
+++ b/Static/Css/pages/order_details.css
@@ -5,6 +5,9 @@
     background-color: var(--white);
 }
 
+.order-details-page .my-container {
+    padding-top: 10px;
+}
 
 /* Main container */
 .delivery-progress {
